--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,53 @@
-discord.py==2.1.*
-python-dotenv==0.21.*
-openai==0.27.*
-PyYAML==6.0
-dacite==1.6.*
-numpy
+aiohttp==3.9.1
+aiosignal==1.3.1
+annotated-types==0.6.0
+anyio==4.1.0
+asttokens==2.4.1
+async-timeout==4.0.3
+attrs==23.1.0
+certifi==2023.11.17
+charset-normalizer==3.3.2
+click==8.1.7
+dacite==1.8.1
+decorator==5.1.1
+distro==1.8.0
+elevenlabs==0.2.27
+executing==2.0.1
+ffmpeg-python==0.2.0
+frozenlist==1.4.1
+future==0.18.3
+gTTS==2.5.0
+h11==0.14.0
+httpcore==1.0.2
+httpx==0.26.0
+idna==3.6
+imageio-ffmpeg==0.4.9
+ipython==8.19.0
+jedi==0.19.1
+matplotlib-inline==0.1.6
+multidict==6.0.4
+numpy==1.26.2
+openai==1.4.0
+parso==0.8.3
+pexpect==4.9.0
+Pillow==10.1.0
+prompt-toolkit==3.0.43
+ptyprocess==0.7.0
+pure-eval==0.2.2
+py-cord==2.4.1
+pydantic==2.5.2
+pydantic_core==2.14.5
+Pygments==2.17.2
+python-dotenv==1.0.0
+PyYAML==6.0.1
+requests==2.31.0
+six==1.16.0
+sniffio==1.3.0
+stack-data==0.6.3
+tqdm==4.66.1
+traitlets==5.14.0
+typing_extensions==4.9.0
+urllib3==2.1.0
+wcwidth==0.2.12
+websockets==12.0
+yarl==1.9.4
