--- a/requirements.txt
+++ b/requirements.txt
@@ -1,52 +1,92 @@
+acme==2.1.0
+ai21==1.3.3
 aiohttp==3.9.1
 aiosignal==1.3.1
-annotated-types==0.6.0
-anyio==4.1.0
-asttokens==2.4.1
-async-timeout==4.0.3
+anyio==3.7.0
+argcomplete==3.1.4
 attrs==23.1.0
+blinker==1.7.0
+cachelib==0.10.2
+certbot==2.1.0
 certifi==2023.11.17
+chardet==5.2.0
 charset-normalizer==3.3.2
-click==8.1.7
-dacite==1.8.1
-decorator==5.1.1
-distro==1.8.0
-elevenlabs==0.2.27
-executing==2.0.1
+click==8.1.6
+colorama==0.4.6
+colorzero==2.0
+ConfigArgParse==1.5.3
+configobj==5.0.8
+cryptography==38.0.4
+dacite==1.6.0
+dbus-python==1.3.2
+discord-py-interactions==5.11.0
+discord-py-slash-command==4.2.1
+discord-typings==0.7.0
+distro==1.9.0
+distro-info==1.7
+emoji==2.9.0
 ffmpeg-python==0.2.0
-frozenlist==1.4.1
+Flask==3.0.0
+Flask-Session==0.5.0
+frozenlist==1.4.0
 future==0.18.3
+gpiozero==1.6.2
+gyp==0.1
 h11==0.14.0
 httpcore==1.0.2
+httplib2==0.20.4
 httpx==0.26.0
-idna==3.6
+idna==3.3
 imageio-ffmpeg==0.4.9
-ipython==8.19.0
-jedi==0.19.1
-matplotlib-inline==0.1.6
+iotop==0.6
+itsdangerous==2.1.2
+Jinja2==3.1.2
+josepy==1.13.0
+lazr.restfulclient==0.14.5
+lazr.uri==1.0.6
+markdown-it-py==3.0.0
+MarkupSafe==2.1.3
+mdurl==0.1.2
 multidict==6.0.4
+nala==0.14.0
 numpy==1.26.2
-openai==1.4.0
-parso==0.8.3
-pexpect==4.9.0
-Pillow==10.1.0
-prompt-toolkit==3.0.43
+oauthlib==3.2.2
+openai==0.27.10
+packaging==23.2
+parsedatetime==2.6
+pexpect==4.8.0
+pipx==1.4.0
+platformdirs==4.1.0
+psutil==5.9.5
 ptyprocess==0.7.0
-pure-eval==0.2.2
-py-cord==2.4.1
-pydantic==2.5.2
-pydantic_core==2.14.5
-Pygments==2.17.2
-python-dotenv==1.0.0
-PyYAML==6.0.1
+pycord==0.1.1
+Pygments==2.15.1
+PyGObject==3.46.0
+PyICU==2.12
+PyJWT==2.7.0
+pyOpenSSL==23.2.0
+pyparsing==3.1.1
+pyRFC3339==1.1
+python-apt==2.7.0+b1
+python-debian==0.1.49
+python-dotenv==0.21.1
+pytz==2023.3.post1
+PyYAML==6.0
 requests==2.31.0
+rich==13.3.1
+RPi.GPIO==0.7.1a4
 six==1.16.0
 sniffio==1.3.0
-stack-data==0.6.3
+socksio==1.0.0
+ssh-import-id==5.10
+toml==0.10.2
+tomli==2.0.1
 tqdm==4.66.1
-traitlets==5.14.0
-typing_extensions==4.9.0
-urllib3==2.1.0
-wcwidth==0.2.12
-websockets==12.0
-yarl==1.9.4
+typer==0.9.0
+typing_extensions==4.7.1
+unattended-upgrades==0.1
+urllib3==1.26.18
+userpath==1.9.1
+wadllib==1.3.6
+Werkzeug==3.0.1
+yarl==1.9.3
