--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 env
 .env
+.venv
 __pycache__/
 */.DS_Store
 .DS_Store
@@ -10,4 +11,4 @@ src/notes/
 !/images/mask.png
 database.json
 logs.txt
-bot-env/
+
